--- a/static/buildspec.yml
+++ b/static/buildspec.yml
@@ -11,11 +11,6 @@ phases:
     build:
         commands:
             - npm install
-            - npm run docgen
-            - cd website
-            - echo Installing source NPM dependencies...
-            - if [ "$DEPLOY_ENV" == "production" ]; then mv sidebars.json.prod sidebars.json; fi
-            - npm install
             - npm run build
 
 # Include only the files required for your application to run.
@@ -25,4 +20,4 @@ phases:
 artifacts:
     files:
     - '**/*'
-    base-directory: 'website/build/instathings'
+    base-directory: 'build'
