--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,7 @@ phases:
     build:
         commands:
             - npm install
+            - if [ "$DEPLOY_ENV" = 'production' ]; then rm docs/staging.md; fi
             - npm run build
 
 # Include only the files required for your application to run.
